<resources>
    <string name="app_name">Film Finder</string>

    <!-- Navigation Drawer -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_add">Add film</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="user_name">Name</string>
    <string name="user_nickname">Nickname</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>


    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="not_found">No results found.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="sample_text">Sample Text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="film_title_hint">Title</string>
    <string name="film_director_hint">Director</string>
    <string name="film_protagonist_hint">Main actor</string>
    <string name="film_country_hint">Country</string>
    <string name="film_year_hint">Release year</string>


    <!-- About -->
    <string name="authors_title">Film Finder authors</string>
    <string name="author_david">David Segovia\ndsegovia@est.fib.upc.edu</string>
    <string name="author_roger">Roger Oriol Pérez\nroriol@est.fib.upc.edu</string>

    <!-- Help -->
    <string name="faq">FAQ</string>
    <string name="find_film_question">How can I find a movie?</string>
    <string name="find_film_description">To find a film, you just have to click the search button on
    the top right of the screen and type the title of the film you want to look for.</string>
    <string name="add_film_question">How can I add a film to the database?</string>
    <string name="add_film_description">You can access the creation form to add a film to the database by
    clicking "Add film" on the navigation drawer or by clicking the red button with a plus on the bottom right
    of your screen. There you will have to introduce the characteristics of the film like title, director, protagonist, year of release and rating.</string>
    <string name="remove_film_question">How can I remove a film from the database?</string>
    <string name="remove_film_description">You can delete any desired film by searching it and swiping it either right or left.</string>
    <string name="recover_film_question">Can I recover a film after removing it?</string>
    <string name="recover_film_answer">You can, but just for a few moments after deleting it. A snackbar will appear at the bottom of the screen giving the option of undoing your action.</string>
    <string name="save_film_question">Can I save a film of my interest and access it later?</string>
    <string name="save_film_answer">Yes. Whenever you find a film you want to save, you can tap button on its top right, above the rating, to save it to your watchlist.
    You can then access to your watchlist by clicking it on the navigation drawer menu. You can also remove a film from your watchlist by swiping it right or left on your watchlist.</string>
    <string name="title_activity_delete_me">DeleteMe</string>

    <string name="watchlist_key">WATCHLIST</string>
</resources>
