<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1_id"
        android:checkableBehavior="all">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_watchlist"
                android:icon="@drawable/ic_menu_list"
                android:title="@string/menu_watchlist" />
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_add" />

    </group>

    <group
        android:id="@+id/group2_id"
        android:checkableBehavior="all">
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_about" />
    </group>

</menu>
