<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/help">
        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:text="@string/faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/faq_title"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textColor="@color/abc_input_method_navigation_guard" />

            <TextView
                android:text="@string/find_film_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/faq_title"
                android:layout_alignStart="@+id/faq_title"
                android:layout_marginTop="15dp"
                android:id="@+id/textView2"
                android:textStyle="normal|bold"
                android:textColor="#000" />

            <TextView
                android:text="@string/find_film_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2"
                android:layout_marginEnd="12dp"
                android:layout_alignStart="@+id/textView2" />

            <TextView
                android:text="@string/add_film_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:id="@+id/textView4"
                android:layout_alignStart="@+id/textView3"
                android:textStyle="normal|bold"
                android:layout_marginTop="25px"
                android:textColor="#000" />

            <TextView
                android:text="@string/add_film_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_marginEnd="12dp"
                android:layout_alignStart="@+id/textView4" />

            <TextView
                android:text="@string/remove_film_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:id="@+id/textView6"
                android:layout_alignStart="@+id/textView3"
                android:textStyle="normal|bold"
                android:layout_marginTop="25px"
                android:textColor="#000" />

            <TextView
                android:text="@string/remove_film_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView6"
                android:layout_marginEnd="12dp"
                android:layout_alignStart="@+id/textView4" />

            <TextView
                android:text="@string/recover_film_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:id="@+id/textView8"
                android:layout_alignStart="@+id/textView3"
                android:textStyle="normal|bold"
                android:layout_marginTop="25px"
                android:textColor="#000" />

            <TextView
                android:text="@string/recover_film_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView8"
                android:layout_marginEnd="12dp"
                android:layout_alignStart="@+id/textView8" />

            <TextView
                android:text="@string/save_film_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:id="@+id/textView10"
                android:layout_alignStart="@+id/textView9"
                android:textStyle="normal|bold"
                android:layout_marginTop="25px"
                android:textColor="#000" />

            <TextView
                android:text="@string/save_film_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_below="@+id/textView10"
                android:layout_marginEnd="12dp"
                android:layout_alignStart="@+id/textView10" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>